--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "json-server": "^0.17.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
@@ -16,7 +17,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "api": "json-server -p 3500 -w data/db.json"
     },
     "eslintConfig": {
         "extends": [
